parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON placeholder_goto_main create_scopes global_scope main_function end_scopes fill_goto_main
Rule 2     placeholder_goto_main -> <empty>
Rule 3     global_scope -> VARIABLES LBRACE decl_list RBRACE function_decl_list
Rule 4     global_scope -> VARIABLES LBRACE decl_list RBRACE
Rule 5     function_decl_list -> function_decl function_decl_list
Rule 6     function_decl_list -> empty
Rule 7     main_function -> MAIN LPAREN RPAREN LBRACE start_main stmt_list RBRACE
Rule 8     start_main -> <empty>
Rule 9     fill_goto_main -> <empty>
Rule 10    create_scopes -> <empty>
Rule 11    end_scopes -> <empty>
Rule 12    decl_list -> decl SEMICOLON decl_list
Rule 13    decl_list -> decl SEMICOLON
Rule 14    decl_list -> empty
Rule 15    decl -> type ID
Rule 16    decl -> array_decl
Rule 17    type -> INT
Rule 18    type -> FLOAT
Rule 19    type -> STRING
Rule 20    type -> BOOL
Rule 21    stmt_list -> stmt SEMICOLON stmt_list
Rule 22    stmt_list -> stmt SEMICOLON
Rule 23    stmt -> assign
Rule 24    stmt -> array_assign
Rule 25    stmt -> print
Rule 26    stmt -> conditional
Rule 27    stmt -> loop
Rule 28    stmt -> function_call
Rule 29    stmt -> decl
Rule 30    stmt -> built_in_function
Rule 31    stmt -> return_stmt
Rule 32    built_in_function -> TEACH_SUM LPAREN RPAREN
Rule 33    built_in_function -> TEACH_SUBSTRACTION LPAREN RPAREN
Rule 34    built_in_function -> TEACH_MULTIPLICATION LPAREN RPAREN
Rule 35    built_in_function -> TEACH_DIVISION LPAREN RPAREN
Rule 36    built_in_function -> TEACH_IF LPAREN RPAREN
Rule 37    built_in_function -> TEACH_WHILE LPAREN RPAREN
Rule 38    built_in_function -> TEACH_FUNCTION_DECLARATION LPAREN RPAREN
Rule 39    built_in_function -> TEACH_FUNCTION_CALL LPAREN RPAREN
Rule 40    built_in_function -> AYUDA LPAREN RPAREN
Rule 41    assign -> ID EQUALS expr
Rule 42    expr -> expr PLUS term
Rule 43    expr -> expr MINUS term
Rule 44    expr -> expr comp_op term
Rule 45    expr -> term
Rule 46    term -> term MULTIPLY factor
Rule 47    term -> term DIVIDE factor
Rule 48    term -> factor
Rule 49    term -> function_call
Rule 50    term -> array_access
Rule 51    factor -> LPAREN expr RPAREN
Rule 52    factor -> CTEI
Rule 53    factor -> FLOAT_NUMBER
Rule 54    factor -> STRING_LITERAL
Rule 55    factor -> TRUE
Rule 56    factor -> FALSE
Rule 57    factor -> ID
Rule 58    factor -> function_call
Rule 59    print -> PRINT COLON expr
Rule 60    print -> PRINT COLON expr COMMA expr
Rule 61    conditional -> IF LPAREN comp_expr RPAREN LBRACE stmt_list RBRACE else_stmt
Rule 62    conditional -> IF LPAREN comp_expr RPAREN LBRACE stmt_list RBRACE
Rule 63    comp_expr -> expr comp_op expr
Rule 64    comp_op -> LESS_THAN
Rule 65    comp_op -> GREATER_THAN
Rule 66    comp_op -> LESS_EQUAL
Rule 67    comp_op -> GREATER_EQUAL
Rule 68    comp_op -> EQUAL_EQUAL
Rule 69    comp_op -> NOT_EQUAL
Rule 70    else_stmt -> ELSE LBRACE else_part stmt_list RBRACE
Rule 71    else_stmt -> empty
Rule 72    else_part -> <empty>
Rule 73    loop -> WHILE LPAREN comp_expr RPAREN LBRACE stmt_list RBRACE
Rule 74    create_function_scope -> <empty>
Rule 75    function_decl -> type ID LPAREN create_function_scope param_list RPAREN LBRACE stmt_list end_scopes RBRACE
Rule 76    function_decl -> VOID ID LPAREN create_function_scope param_list RPAREN LBRACE stmt_list_without_return end_scopes RBRACE
Rule 77    stmt_list_without_return -> stmt_without_return SEMICOLON stmt_list_without_return
Rule 78    stmt_list_without_return -> stmt_without_return SEMICOLON
Rule 79    stmt_without_return -> assign
Rule 80    stmt_without_return -> array_assign
Rule 81    stmt_without_return -> print
Rule 82    stmt_without_return -> conditional_without_return
Rule 83    stmt_without_return -> loop
Rule 84    stmt_without_return -> function_call
Rule 85    stmt_without_return -> decl
Rule 86    stmt_without_return -> built_in_function
Rule 87    conditional_without_return -> IF LPAREN comp_expr RPAREN LBRACE stmt_list_without_return RBRACE else_stmt
Rule 88    conditional_without_return -> IF LPAREN comp_expr RPAREN LBRACE stmt_list_without_return RBRACE
Rule 89    return_stmt -> RETURN expr
Rule 90    function_call -> ID LPAREN arg_list RPAREN
Rule 91    arg_list -> arg_list COMMA expr
Rule 92    arg_list -> expr
Rule 93    param_list -> param COMMA param_list
Rule 94    param_list -> param
Rule 95    param_list -> empty
Rule 96    param -> type ID
Rule 97    array_decl -> type ID LBRACKET CTEI RBRACKET
Rule 98    array_assign -> ID EQUALS LBRACE CTEI_list RBRACE
Rule 99    CTEI_list -> CTEI
Rule 100   CTEI_list -> CTEI_list COMMA CTEI
Rule 101   array_access -> ID LBRACKET expr RBRACKET
Rule 102   empty -> <empty>

Terminals, with rules where they appear

AYUDA                : 40
BOOL                 : 20
COLON                : 59 60
COMMA                : 60 91 93 100
CTEI                 : 52 97 99 100
DIVIDE               : 47
ELSE                 : 70
EQUALS               : 41 98
EQUAL_EQUAL          : 68
FALSE                : 56
FLOAT                : 18
FLOAT_NUMBER         : 53
GREATER_EQUAL        : 67
GREATER_THAN         : 65
ID                   : 1 15 41 57 75 76 90 96 97 98 101
IF                   : 61 62 87 88
INT                  : 17
LBRACE               : 3 4 7 61 62 70 73 75 76 87 88 98
LBRACKET             : 97 101
LESS_EQUAL           : 66
LESS_THAN            : 64
LPAREN               : 7 32 33 34 35 36 37 38 39 40 51 61 62 73 75 76 87 88 90
MAIN                 : 7
MINUS                : 43
MULTIPLY             : 46
NOT_EQUAL            : 69
PLUS                 : 42
PRINT                : 59 60
PROGRAM              : 1
RBRACE               : 3 4 7 61 62 70 73 75 76 87 88 98
RBRACKET             : 97 101
RETURN               : 89
RPAREN               : 7 32 33 34 35 36 37 38 39 40 51 61 62 73 75 76 87 88 90
SEMICOLON            : 1 12 13 21 22 77 78
STRING               : 19
STRING_LITERAL       : 54
TEACH_DIVISION       : 35
TEACH_FUNCTION_CALL  : 39
TEACH_FUNCTION_DECLARATION : 38
TEACH_IF             : 36
TEACH_MULTIPLICATION : 34
TEACH_SUBSTRACTION   : 33
TEACH_SUM            : 32
TEACH_WHILE          : 37
TRUE                 : 55
VARIABLES            : 3 4
VOID                 : 76
WHILE                : 73
error                : 

Nonterminals, with rules where they appear

CTEI_list            : 98 100
arg_list             : 90 91
array_access         : 50
array_assign         : 24 80
array_decl           : 16
assign               : 23 79
built_in_function    : 30 86
comp_expr            : 61 62 73 87 88
comp_op              : 44 63
conditional          : 26
conditional_without_return : 82
create_function_scope : 75 76
create_scopes        : 1
decl                 : 12 13 29 85
decl_list            : 3 4 12
else_part            : 70
else_stmt            : 61 87
empty                : 6 14 71 95
end_scopes           : 1 75 76
expr                 : 41 42 43 44 51 59 60 60 63 63 89 91 92 101
factor               : 46 47 48
fill_goto_main       : 1
function_call        : 28 49 58 84
function_decl        : 5
function_decl_list   : 3 5
global_scope         : 1
loop                 : 27 83
main_function        : 1
param                : 93 94
param_list           : 75 76 93
placeholder_goto_main : 1
print                : 25 81
program              : 0
return_stmt          : 31
start_main           : 7
stmt                 : 21 22
stmt_list            : 7 21 61 62 70 73 75
stmt_list_without_return : 76 77 87 88
stmt_without_return  : 77 78
term                 : 42 43 44 45 46 47
type                 : 15 75 96 97

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON placeholder_goto_main create_scopes global_scope main_function end_scopes fill_goto_main

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON placeholder_goto_main create_scopes global_scope main_function end_scopes fill_goto_main

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON placeholder_goto_main create_scopes global_scope main_function end_scopes fill_goto_main

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . placeholder_goto_main create_scopes global_scope main_function end_scopes fill_goto_main
    (2) placeholder_goto_main -> .

    VARIABLES       reduce using rule 2 (placeholder_goto_main -> .)

    placeholder_goto_main          shift and go to state 5

state 5

    (1) program -> PROGRAM ID SEMICOLON placeholder_goto_main . create_scopes global_scope main_function end_scopes fill_goto_main
    (10) create_scopes -> .

    VARIABLES       reduce using rule 10 (create_scopes -> .)

    create_scopes                  shift and go to state 6

state 6

    (1) program -> PROGRAM ID SEMICOLON placeholder_goto_main create_scopes . global_scope main_function end_scopes fill_goto_main
    (3) global_scope -> . VARIABLES LBRACE decl_list RBRACE function_decl_list
    (4) global_scope -> . VARIABLES LBRACE decl_list RBRACE

    VARIABLES       shift and go to state 8

    global_scope                   shift and go to state 7

state 7

    (1) program -> PROGRAM ID SEMICOLON placeholder_goto_main create_scopes global_scope . main_function end_scopes fill_goto_main
    (7) main_function -> . MAIN LPAREN RPAREN LBRACE start_main stmt_list RBRACE

    MAIN            shift and go to state 10

    main_function                  shift and go to state 9

state 8

    (3) global_scope -> VARIABLES . LBRACE decl_list RBRACE function_decl_list
    (4) global_scope -> VARIABLES . LBRACE decl_list RBRACE

    LBRACE          shift and go to state 11


state 9

    (1) program -> PROGRAM ID SEMICOLON placeholder_goto_main create_scopes global_scope main_function . end_scopes fill_goto_main
    (11) end_scopes -> .

    $end            reduce using rule 11 (end_scopes -> .)

    end_scopes                     shift and go to state 12

state 10

    (7) main_function -> MAIN . LPAREN RPAREN LBRACE start_main stmt_list RBRACE

    LPAREN          shift and go to state 13


state 11

    (3) global_scope -> VARIABLES LBRACE . decl_list RBRACE function_decl_list
    (4) global_scope -> VARIABLES LBRACE . decl_list RBRACE
    (12) decl_list -> . decl SEMICOLON decl_list
    (13) decl_list -> . decl SEMICOLON
    (14) decl_list -> . empty
    (15) decl -> . type ID
    (16) decl -> . array_decl
    (102) empty -> .
    (17) type -> . INT
    (18) type -> . FLOAT
    (19) type -> . STRING
    (20) type -> . BOOL
    (97) array_decl -> . type ID LBRACKET CTEI RBRACKET

    RBRACE          reduce using rule 102 (empty -> .)
    INT             shift and go to state 19
    FLOAT           shift and go to state 20
    STRING          shift and go to state 21
    BOOL            shift and go to state 22

    decl_list                      shift and go to state 14
    decl                           shift and go to state 15
    empty                          shift and go to state 16
    type                           shift and go to state 17
    array_decl                     shift and go to state 18

state 12

    (1) program -> PROGRAM ID SEMICOLON placeholder_goto_main create_scopes global_scope main_function end_scopes . fill_goto_main
    (9) fill_goto_main -> .

    $end            reduce using rule 9 (fill_goto_main -> .)

    fill_goto_main                 shift and go to state 23

state 13

    (7) main_function -> MAIN LPAREN . RPAREN LBRACE start_main stmt_list RBRACE

    RPAREN          shift and go to state 24


state 14

    (3) global_scope -> VARIABLES LBRACE decl_list . RBRACE function_decl_list
    (4) global_scope -> VARIABLES LBRACE decl_list . RBRACE

    RBRACE          shift and go to state 25


state 15

    (12) decl_list -> decl . SEMICOLON decl_list
    (13) decl_list -> decl . SEMICOLON

    SEMICOLON       shift and go to state 26


state 16

    (14) decl_list -> empty .

    RBRACE          reduce using rule 14 (decl_list -> empty .)


state 17

    (15) decl -> type . ID
    (97) array_decl -> type . ID LBRACKET CTEI RBRACKET

    ID              shift and go to state 27


state 18

    (16) decl -> array_decl .

    SEMICOLON       reduce using rule 16 (decl -> array_decl .)


state 19

    (17) type -> INT .

    ID              reduce using rule 17 (type -> INT .)


state 20

    (18) type -> FLOAT .

    ID              reduce using rule 18 (type -> FLOAT .)


state 21

    (19) type -> STRING .

    ID              reduce using rule 19 (type -> STRING .)


state 22

    (20) type -> BOOL .

    ID              reduce using rule 20 (type -> BOOL .)


state 23

    (1) program -> PROGRAM ID SEMICOLON placeholder_goto_main create_scopes global_scope main_function end_scopes fill_goto_main .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON placeholder_goto_main create_scopes global_scope main_function end_scopes fill_goto_main .)


state 24

    (7) main_function -> MAIN LPAREN RPAREN . LBRACE start_main stmt_list RBRACE

    LBRACE          shift and go to state 28


state 25

    (3) global_scope -> VARIABLES LBRACE decl_list RBRACE . function_decl_list
    (4) global_scope -> VARIABLES LBRACE decl_list RBRACE .
    (5) function_decl_list -> . function_decl function_decl_list
    (6) function_decl_list -> . empty
    (75) function_decl -> . type ID LPAREN create_function_scope param_list RPAREN LBRACE stmt_list end_scopes RBRACE
    (76) function_decl -> . VOID ID LPAREN create_function_scope param_list RPAREN LBRACE stmt_list_without_return end_scopes RBRACE
    (102) empty -> .
    (17) type -> . INT
    (18) type -> . FLOAT
    (19) type -> . STRING
    (20) type -> . BOOL

  ! reduce/reduce conflict for MAIN resolved using rule 4 (global_scope -> VARIABLES LBRACE decl_list RBRACE .)
    MAIN            reduce using rule 4 (global_scope -> VARIABLES LBRACE decl_list RBRACE .)
    VOID            shift and go to state 33
    INT             shift and go to state 19
    FLOAT           shift and go to state 20
    STRING          shift and go to state 21
    BOOL            shift and go to state 22

  ! MAIN            [ reduce using rule 102 (empty -> .) ]

    function_decl_list             shift and go to state 29
    function_decl                  shift and go to state 30
    empty                          shift and go to state 31
    type                           shift and go to state 32

state 26

    (12) decl_list -> decl SEMICOLON . decl_list
    (13) decl_list -> decl SEMICOLON .
    (12) decl_list -> . decl SEMICOLON decl_list
    (13) decl_list -> . decl SEMICOLON
    (14) decl_list -> . empty
    (15) decl -> . type ID
    (16) decl -> . array_decl
    (102) empty -> .
    (17) type -> . INT
    (18) type -> . FLOAT
    (19) type -> . STRING
    (20) type -> . BOOL
    (97) array_decl -> . type ID LBRACKET CTEI RBRACKET

  ! reduce/reduce conflict for RBRACE resolved using rule 13 (decl_list -> decl SEMICOLON .)
    RBRACE          reduce using rule 13 (decl_list -> decl SEMICOLON .)
    INT             shift and go to state 19
    FLOAT           shift and go to state 20
    STRING          shift and go to state 21
    BOOL            shift and go to state 22

  ! RBRACE          [ reduce using rule 102 (empty -> .) ]

    decl                           shift and go to state 15
    decl_list                      shift and go to state 34
    empty                          shift and go to state 16
    type                           shift and go to state 17
    array_decl                     shift and go to state 18

state 27

    (15) decl -> type ID .
    (97) array_decl -> type ID . LBRACKET CTEI RBRACKET

    SEMICOLON       reduce using rule 15 (decl -> type ID .)
    LBRACKET        shift and go to state 35


state 28

    (7) main_function -> MAIN LPAREN RPAREN LBRACE . start_main stmt_list RBRACE
    (8) start_main -> .

    ID              reduce using rule 8 (start_main -> .)
    PRINT           reduce using rule 8 (start_main -> .)
    IF              reduce using rule 8 (start_main -> .)
    WHILE           reduce using rule 8 (start_main -> .)
    TEACH_SUM       reduce using rule 8 (start_main -> .)
    TEACH_SUBSTRACTION reduce using rule 8 (start_main -> .)
    TEACH_MULTIPLICATION reduce using rule 8 (start_main -> .)
    TEACH_DIVISION  reduce using rule 8 (start_main -> .)
    TEACH_IF        reduce using rule 8 (start_main -> .)
    TEACH_WHILE     reduce using rule 8 (start_main -> .)
    TEACH_FUNCTION_DECLARATION reduce using rule 8 (start_main -> .)
    TEACH_FUNCTION_CALL reduce using rule 8 (start_main -> .)
    AYUDA           reduce using rule 8 (start_main -> .)
    RETURN          reduce using rule 8 (start_main -> .)
    INT             reduce using rule 8 (start_main -> .)
    FLOAT           reduce using rule 8 (start_main -> .)
    STRING          reduce using rule 8 (start_main -> .)
    BOOL            reduce using rule 8 (start_main -> .)

    start_main                     shift and go to state 36

state 29

    (3) global_scope -> VARIABLES LBRACE decl_list RBRACE function_decl_list .

    MAIN            reduce using rule 3 (global_scope -> VARIABLES LBRACE decl_list RBRACE function_decl_list .)


state 30

    (5) function_decl_list -> function_decl . function_decl_list
    (5) function_decl_list -> . function_decl function_decl_list
    (6) function_decl_list -> . empty
    (75) function_decl -> . type ID LPAREN create_function_scope param_list RPAREN LBRACE stmt_list end_scopes RBRACE
    (76) function_decl -> . VOID ID LPAREN create_function_scope param_list RPAREN LBRACE stmt_list_without_return end_scopes RBRACE
    (102) empty -> .
    (17) type -> . INT
    (18) type -> . FLOAT
    (19) type -> . STRING
    (20) type -> . BOOL

    VOID            shift and go to state 33
    MAIN            reduce using rule 102 (empty -> .)
    INT             shift and go to state 19
    FLOAT           shift and go to state 20
    STRING          shift and go to state 21
    BOOL            shift and go to state 22

    function_decl                  shift and go to state 30
    function_decl_list             shift and go to state 37
    empty                          shift and go to state 31
    type                           shift and go to state 32

state 31

    (6) function_decl_list -> empty .

    MAIN            reduce using rule 6 (function_decl_list -> empty .)


state 32

    (75) function_decl -> type . ID LPAREN create_function_scope param_list RPAREN LBRACE stmt_list end_scopes RBRACE

    ID              shift and go to state 38


state 33

    (76) function_decl -> VOID . ID LPAREN create_function_scope param_list RPAREN LBRACE stmt_list_without_return end_scopes RBRACE

    ID              shift and go to state 39


state 34

    (12) decl_list -> decl SEMICOLON decl_list .

    RBRACE          reduce using rule 12 (decl_list -> decl SEMICOLON decl_list .)


state 35

    (97) array_decl -> type ID LBRACKET . CTEI RBRACKET

    CTEI            shift and go to state 40


state 36

    (7) main_function -> MAIN LPAREN RPAREN LBRACE start_main . stmt_list RBRACE
    (21) stmt_list -> . stmt SEMICOLON stmt_list
    (22) stmt_list -> . stmt SEMICOLON
    (23) stmt -> . assign
    (24) stmt -> . array_assign
    (25) stmt -> . print
    (26) stmt -> . conditional
    (27) stmt -> . loop
    (28) stmt -> . function_call
    (29) stmt -> . decl
    (30) stmt -> . built_in_function
    (31) stmt -> . return_stmt
    (41) assign -> . ID EQUALS expr
    (98) array_assign -> . ID EQUALS LBRACE CTEI_list RBRACE
    (59) print -> . PRINT COLON expr
    (60) print -> . PRINT COLON expr COMMA expr
    (61) conditional -> . IF LPAREN comp_expr RPAREN LBRACE stmt_list RBRACE else_stmt
    (62) conditional -> . IF LPAREN comp_expr RPAREN LBRACE stmt_list RBRACE
    (73) loop -> . WHILE LPAREN comp_expr RPAREN LBRACE stmt_list RBRACE
    (90) function_call -> . ID LPAREN arg_list RPAREN
    (15) decl -> . type ID
    (16) decl -> . array_decl
    (32) built_in_function -> . TEACH_SUM LPAREN RPAREN
    (33) built_in_function -> . TEACH_SUBSTRACTION LPAREN RPAREN
    (34) built_in_function -> . TEACH_MULTIPLICATION LPAREN RPAREN
    (35) built_in_function -> . TEACH_DIVISION LPAREN RPAREN
    (36) built_in_function -> . TEACH_IF LPAREN RPAREN
    (37) built_in_function -> . TEACH_WHILE LPAREN RPAREN
    (38) built_in_function -> . TEACH_FUNCTION_DECLARATION LPAREN RPAREN
    (39) built_in_function -> . TEACH_FUNCTION_CALL LPAREN RPAREN
    (40) built_in_function -> . AYUDA LPAREN RPAREN
    (89) return_stmt -> . RETURN expr
    (17) type -> . INT
    (18) type -> . FLOAT
    (19) type -> . STRING
    (20) type -> . BOOL
    (97) array_decl -> . type ID LBRACKET CTEI RBRACKET

    ID              shift and go to state 52
    PRINT           shift and go to state 53
    IF              shift and go to state 54
    WHILE           shift and go to state 55
    TEACH_SUM       shift and go to state 56
    TEACH_SUBSTRACTION shift and go to state 57
    TEACH_MULTIPLICATION shift and go to state 58
    TEACH_DIVISION  shift and go to state 59
    TEACH_IF        shift and go to state 60
    TEACH_WHILE     shift and go to state 61
    TEACH_FUNCTION_DECLARATION shift and go to state 62
    TEACH_FUNCTION_CALL shift and go to state 63
    AYUDA           shift and go to state 64
    RETURN          shift and go to state 65
    INT             shift and go to state 19
    FLOAT           shift and go to state 20
    STRING          shift and go to state 21
    BOOL            shift and go to state 22

    stmt_list                      shift and go to state 41
    stmt                           shift and go to state 42
    assign                         shift and go to state 43
    array_assign                   shift and go to state 44
    print                          shift and go to state 45
    conditional                    shift and go to state 46
    loop                           shift and go to state 47
    function_call                  shift and go to state 48
    decl                           shift and go to state 49
    built_in_function              shift and go to state 50
    return_stmt                    shift and go to state 51
    type                           shift and go to state 17
    array_decl                     shift and go to state 18

state 37

    (5) function_decl_list -> function_decl function_decl_list .

    MAIN            reduce using rule 5 (function_decl_list -> function_decl function_decl_list .)


state 38

    (75) function_decl -> type ID . LPAREN create_function_scope param_list RPAREN LBRACE stmt_list end_scopes RBRACE

    LPAREN          shift and go to state 66


state 39

    (76) function_decl -> VOID ID . LPAREN create_function_scope param_list RPAREN LBRACE stmt_list_without_return end_scopes RBRACE

    LPAREN          shift and go to state 67


state 40

    (97) array_decl -> type ID LBRACKET CTEI . RBRACKET

    RBRACKET        shift and go to state 68


state 41

    (7) main_function -> MAIN LPAREN RPAREN LBRACE start_main stmt_list . RBRACE

    RBRACE          shift and go to state 69


state 42

    (21) stmt_list -> stmt . SEMICOLON stmt_list
    (22) stmt_list -> stmt . SEMICOLON

    SEMICOLON       shift and go to state 70


state 43

    (23) stmt -> assign .

    SEMICOLON       reduce using rule 23 (stmt -> assign .)


state 44

    (24) stmt -> array_assign .

    SEMICOLON       reduce using rule 24 (stmt -> array_assign .)


state 45

    (25) stmt -> print .

    SEMICOLON       reduce using rule 25 (stmt -> print .)


state 46

    (26) stmt -> conditional .

    SEMICOLON       reduce using rule 26 (stmt -> conditional .)


state 47

    (27) stmt -> loop .

    SEMICOLON       reduce using rule 27 (stmt -> loop .)


state 48

    (28) stmt -> function_call .

    SEMICOLON       reduce using rule 28 (stmt -> function_call .)


state 49

    (29) stmt -> decl .

    SEMICOLON       reduce using rule 29 (stmt -> decl .)


state 50

    (30) stmt -> built_in_function .

    SEMICOLON       reduce using rule 30 (stmt -> built_in_function .)


state 51

    (31) stmt -> return_stmt .

    SEMICOLON       reduce using rule 31 (stmt -> return_stmt .)


state 52

    (41) assign -> ID . EQUALS expr
    (98) array_assign -> ID . EQUALS LBRACE CTEI_list RBRACE
    (90) function_call -> ID . LPAREN arg_list RPAREN

    EQUALS          shift and go to state 71
    LPAREN          shift and go to state 72


state 53

    (59) print -> PRINT . COLON expr
    (60) print -> PRINT . COLON expr COMMA expr

    COLON           shift and go to state 73


state 54

    (61) conditional -> IF . LPAREN comp_expr RPAREN LBRACE stmt_list RBRACE else_stmt
    (62) conditional -> IF . LPAREN comp_expr RPAREN LBRACE stmt_list RBRACE

    LPAREN          shift and go to state 74


state 55

    (73) loop -> WHILE . LPAREN comp_expr RPAREN LBRACE stmt_list RBRACE

    LPAREN          shift and go to state 75


state 56

    (32) built_in_function -> TEACH_SUM . LPAREN RPAREN

    LPAREN          shift and go to state 76


state 57

    (33) built_in_function -> TEACH_SUBSTRACTION . LPAREN RPAREN

    LPAREN          shift and go to state 77


state 58

    (34) built_in_function -> TEACH_MULTIPLICATION . LPAREN RPAREN

    LPAREN          shift and go to state 78


state 59

    (35) built_in_function -> TEACH_DIVISION . LPAREN RPAREN

    LPAREN          shift and go to state 79


state 60

    (36) built_in_function -> TEACH_IF . LPAREN RPAREN

    LPAREN          shift and go to state 80


state 61

    (37) built_in_function -> TEACH_WHILE . LPAREN RPAREN

    LPAREN          shift and go to state 81


state 62

    (38) built_in_function -> TEACH_FUNCTION_DECLARATION . LPAREN RPAREN

    LPAREN          shift and go to state 82


state 63

    (39) built_in_function -> TEACH_FUNCTION_CALL . LPAREN RPAREN

    LPAREN          shift and go to state 83


state 64

    (40) built_in_function -> AYUDA . LPAREN RPAREN

    LPAREN          shift and go to state 84


state 65

    (89) return_stmt -> RETURN . expr
    (42) expr -> . expr PLUS term
    (43) expr -> . expr MINUS term
    (44) expr -> . expr comp_op term
    (45) expr -> . term
    (46) term -> . term MULTIPLY factor
    (47) term -> . term DIVIDE factor
    (48) term -> . factor
    (49) term -> . function_call
    (50) term -> . array_access
    (51) factor -> . LPAREN expr RPAREN
    (52) factor -> . CTEI
    (53) factor -> . FLOAT_NUMBER
    (54) factor -> . STRING_LITERAL
    (55) factor -> . TRUE
    (56) factor -> . FALSE
    (57) factor -> . ID
    (58) factor -> . function_call
    (90) function_call -> . ID LPAREN arg_list RPAREN
    (101) array_access -> . ID LBRACKET expr RBRACKET

    LPAREN          shift and go to state 90
    CTEI            shift and go to state 91
    FLOAT_NUMBER    shift and go to state 92
    STRING_LITERAL  shift and go to state 93
    TRUE            shift and go to state 94
    FALSE           shift and go to state 95
    ID              shift and go to state 96

    expr                           shift and go to state 85
    term                           shift and go to state 86
    factor                         shift and go to state 87
    function_call                  shift and go to state 88
    array_access                   shift and go to state 89

state 66

    (75) function_decl -> type ID LPAREN . create_function_scope param_list RPAREN LBRACE stmt_list end_scopes RBRACE
    (74) create_function_scope -> .

    INT             reduce using rule 74 (create_function_scope -> .)
    FLOAT           reduce using rule 74 (create_function_scope -> .)
    STRING          reduce using rule 74 (create_function_scope -> .)
    BOOL            reduce using rule 74 (create_function_scope -> .)
    RPAREN          reduce using rule 74 (create_function_scope -> .)

    create_function_scope          shift and go to state 97

state 67

    (76) function_decl -> VOID ID LPAREN . create_function_scope param_list RPAREN LBRACE stmt_list_without_return end_scopes RBRACE
    (74) create_function_scope -> .

    INT             reduce using rule 74 (create_function_scope -> .)
    FLOAT           reduce using rule 74 (create_function_scope -> .)
    STRING          reduce using rule 74 (create_function_scope -> .)
    BOOL            reduce using rule 74 (create_function_scope -> .)
    RPAREN          reduce using rule 74 (create_function_scope -> .)

    create_function_scope          shift and go to state 98

state 68

    (97) array_decl -> type ID LBRACKET CTEI RBRACKET .

    SEMICOLON       reduce using rule 97 (array_decl -> type ID LBRACKET CTEI RBRACKET .)


state 69

    (7) main_function -> MAIN LPAREN RPAREN LBRACE start_main stmt_list RBRACE .

    $end            reduce using rule 7 (main_function -> MAIN LPAREN RPAREN LBRACE start_main stmt_list RBRACE .)


state 70

    (21) stmt_list -> stmt SEMICOLON . stmt_list
    (22) stmt_list -> stmt SEMICOLON .
    (21) stmt_list -> . stmt SEMICOLON stmt_list
    (22) stmt_list -> . stmt SEMICOLON
    (23) stmt -> . assign
    (24) stmt -> . array_assign
    (25) stmt -> . print
    (26) stmt -> . conditional
    (27) stmt -> . loop
    (28) stmt -> . function_call
    (29) stmt -> . decl
    (30) stmt -> . built_in_function
    (31) stmt -> . return_stmt
    (41) assign -> . ID EQUALS expr
    (98) array_assign -> . ID EQUALS LBRACE CTEI_list RBRACE
    (59) print -> . PRINT COLON expr
    (60) print -> . PRINT COLON expr COMMA expr
    (61) conditional -> . IF LPAREN comp_expr RPAREN LBRACE stmt_list RBRACE else_stmt
    (62) conditional -> . IF LPAREN comp_expr RPAREN LBRACE stmt_list RBRACE
    (73) loop -> . WHILE LPAREN comp_expr RPAREN LBRACE stmt_list RBRACE
    (90) function_call -> . ID LPAREN arg_list RPAREN
    (15) decl -> . type ID
    (16) decl -> . array_decl
    (32) built_in_function -> . TEACH_SUM LPAREN RPAREN
    (33) built_in_function -> . TEACH_SUBSTRACTION LPAREN RPAREN
    (34) built_in_function -> . TEACH_MULTIPLICATION LPAREN RPAREN
    (35) built_in_function -> . TEACH_DIVISION LPAREN RPAREN
    (36) built_in_function -> . TEACH_IF LPAREN RPAREN
    (37) built_in_function -> . TEACH_WHILE LPAREN RPAREN
    (38) built_in_function -> . TEACH_FUNCTION_DECLARATION LPAREN RPAREN
    (39) built_in_function -> . TEACH_FUNCTION_CALL LPAREN RPAREN
    (40) built_in_function -> . AYUDA LPAREN RPAREN
    (89) return_stmt -> . RETURN expr
    (17) type -> . INT
    (18) type -> . FLOAT
    (19) type -> . STRING
    (20) type -> . BOOL
    (97) array_decl -> . type ID LBRACKET CTEI RBRACKET

    RBRACE          reduce using rule 22 (stmt_list -> stmt SEMICOLON .)
    ID              shift and go to state 52
    PRINT           shift and go to state 53
    IF              shift and go to state 54
    WHILE           shift and go to state 55
    TEACH_SUM       shift and go to state 56
    TEACH_SUBSTRACTION shift and go to state 57
    TEACH_MULTIPLICATION shift and go to state 58
    TEACH_DIVISION  shift and go to state 59
    TEACH_IF        shift and go to state 60
    TEACH_WHILE     shift and go to state 61
    TEACH_FUNCTION_DECLARATION shift and go to state 62
    TEACH_FUNCTION_CALL shift and go to state 63
    AYUDA           shift and go to state 64
    RETURN          shift and go to state 65
    INT             shift and go to state 19
    FLOAT           shift and go to state 20
    STRING          shift and go to state 21
    BOOL            shift and go to state 22

    stmt                           shift and go to state 42
    stmt_list                      shift and go to state 99
    assign                         shift and go to state 43
    array_assign                   shift and go to state 44
    print                          shift and go to state 45
    conditional                    shift and go to state 46
    loop                           shift and go to state 47
    function_call                  shift and go to state 48
    decl                           shift and go to state 49
    built_in_function              shift and go to state 50
    return_stmt                    shift and go to state 51
    type                           shift and go to state 17
    array_decl                     shift and go to state 18

state 71

    (41) assign -> ID EQUALS . expr
    (98) array_assign -> ID EQUALS . LBRACE CTEI_list RBRACE
    (42) expr -> . expr PLUS term
    (43) expr -> . expr MINUS term
    (44) expr -> . expr comp_op term
    (45) expr -> . term
    (46) term -> . term MULTIPLY factor
    (47) term -> . term DIVIDE factor
    (48) term -> . factor
    (49) term -> . function_call
    (50) term -> . array_access
    (51) factor -> . LPAREN expr RPAREN
    (52) factor -> . CTEI
    (53) factor -> . FLOAT_NUMBER
    (54) factor -> . STRING_LITERAL
    (55) factor -> . TRUE
    (56) factor -> . FALSE
    (57) factor -> . ID
    (58) factor -> . function_call
    (90) function_call -> . ID LPAREN arg_list RPAREN
    (101) array_access -> . ID LBRACKET expr RBRACKET

    LBRACE          shift and go to state 101
    LPAREN          shift and go to state 90
    CTEI            shift and go to state 91
    FLOAT_NUMBER    shift and go to state 92
    STRING_LITERAL  shift and go to state 93
    TRUE            shift and go to state 94
